# customer-satisfaction

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  run_deployment.py  run_pipeline.py  streamlit_app.py
.zen/: config.yaml
mlruns/0/: meta.yaml
mlruns/596183231338837533/: meta.yaml
model/: data_cleaning.py  evaluator.py  model_dev.py
pipelines/: deployment_pipeline.py  training_pipeline.py  utils.py
src/: data_cleaning.py
steps/: clean_data.py  config.py  dynamic_importer.py  evaluation.py  ingest_data.py  model_loader.py  model_promoter.py  model_train.py  prediction_service_loader.py  predictor.py  train_model.py
