[tool.poetry]
name = "customer-satisfaction-ml"
version = "0.1.0"
description = "A machine learning project to analyze customer satisfaction."
authors = ["manojgangula20022001@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.2.0"
imbalanced-learn = "0.10.1"
dataclasses = "0.6"
pandas = "~1.5.3"
matplotlib = "3.7.1"
seaborn = "0.12.2"
numpy = "1.22.4"
pickleshare = "0.7.5"
pymongo = "3.11.0"
lightgbm = "3.3.5"
mlflow = "2.3.0"
evidently = "0.1.51.dev0"
gcsfs = "2023.6.0"
python-dotenv = "1.0.0"
pydantic = "1.8.2"
prefect = "0.15.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
